# validacion_facial_flutter

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/app_facial/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: image_utils.dart  main.dart  rust_bridge.dart
lib/screens/: camara_page.dart  ingreso_page.dart  login_page.dart  registro_page.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
validacion_facial/: Cargo.toml
validacion_facial/src/: api.rs  lib.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
